src/test/ui/issues/issue-25368.stderr
error[E0282]: type annotations needed for `(Sender<Foo<T>>, std::sync::mpsc::Receiver<Foo<T>>)`
  --> $DIR/issue-25368.rs:8:9
   |
LL |     let (tx, rx) =
   |         ^^^^^^^^
   |
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let (tx, rx): (Sender<Foo<T>>, std::sync::mpsc::Receiver<Foo<T>>) =
   |                 +++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
